# CuraConnectedComponents

./: CMakeLists.txt  CMakeSip.cmake  README.md  test.py
src/: configure.py  connectedComponentsComputation.cpp  connectedComponentsComputation.h  connectedComponentsComputation.sip  main.cpp  word.cpp
src (copy)/: Makefile  connectedComponentsComputation.cpp  connectedComponentsComputation.h  connectedComponentsComputation.sip  word.h
